--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@loopback/rest": "^9.1.0",
     "@loopback/rest-explorer": "^3.0.4",
     "@loopback/service-proxy": "^3.0.4",
+    "loopback-connector-postgresql": "^5.2.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
